Add & Change document ( According to the schema )
